# graphics-course

tasks/inflight_frames/: App.cpp  App.hpp  CMakeLists.txt
tasks/inflight_frames/shaders/: texture.frag  toy.frag
tasks/local_shadertoy1/: App.cpp  App.hpp
tasks/local_shadertoy1/shaders/: toy.comp
tasks/local_shadertoy2/: App.cpp  App.hpp  CMakeLists.txt
tasks/local_shadertoy2/shaders/: toy.frag  toy.vert
